k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hd-project
  labels:
    name: hd-project
    environment: development
